# Rust_big_task

./: Cargo.toml  README.md  client.rs  database.db  stocks.txt  stocks_small.txt
src/: database.rs  lib.rs  main.rs  protocol.rs  querys.sql
tests/: e2e_live_server.rs  e2e_login_data.rs
